refactor: Rebuild application with modular core, game, UI, and animation systems, and dedicated leaderboard integration.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Rubik's Cube Web App</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
     <!-- Import Map for Three.js -->
     <script type="importmap">
         {
@@ -352,7 +352,7 @@
 }`, null, "rubiks-cube-app");
     </script>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
