--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                     title="Toggle Mirrors">
                     <span class="text-lg">🪞</span>
                 </button>
+                <button id="btn-toggle-sound"
+                    class="bg-green-700 hover:bg-green-600 text-white p-2 rounded transition shadow-lg active:transform active:scale-95"
+                    title="Toggle Sound">
+                    <span class="text-lg">🔊</span>
+                </button>
                 <button id="btn-leaderboard"
                     class="bg-purple-700 hover:bg-purple-600 text-white p-2 rounded transition shadow-lg active:transform active:scale-95"
                     title="Leaderboard">
