--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
                 <div id="puzzle-tabs" class="flex gap-1 min-w-max">
                     <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
                         data-puzzle="2">2x2</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="2x2x3">2x2x3</button>
                     <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition active"
                         data-puzzle="3">3x3</button>
                     <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
@@ -229,7 +231,25 @@
                     <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
                         data-puzzle="7">7x7</button>
                     <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
-                        data-puzzle="2x2x3">2x2x3</button>
+                        data-puzzle="8">8x8</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="9">9x9</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="10">10x10</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="11">11x11</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="12">12x12</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="13">13x13</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="14">14x14</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="15">15x15</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="16">16x16</button>
+                    <button class="puzzle-tab px-3 py-1 rounded text-xs font-medium transition"
+                        data-puzzle="17">17x17</button>
                 </div>
             </div>
 
