added a bunch of cuboid puzzles

--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
             <div class="flex items-center gap-4">
                 <select id="puzzle-select"
                     class="bg-gray-800 text-blue-400 font-bold text-lg border border-gray-600 rounded px-2 py-1 focus:outline-none focus:border-blue-500">
-                    <option value="3">Rubik's Cube</option>
-                    <option value="2x2x3">2x2x3 Cube</option>
                     <option value="2">2x2 Cube</option>
+                    <option value="2x2x1">2x2x1 Cube</option>
+                    <option value="2x2x3">2x2x3 Cube</option>
+                    <option value="2x2x4">2x2x4 Cube</option>
+                    <option value="3">3x3x3 (Rubik's Cube)</option>
+                    <option value="3x3x1">3x3x1 Cube (Floppy)</option>
+                    <option value="3x3x2">3x3x2 Cube</option>
+                    <option value="3x3x4">3x3x4 Cube</option>
+                    <option value="3x3x5">3x3x5 Cube</option>
                     <option value="4">4x4 Cube</option>
                     <option value="5">5x5 Cube</option>
                     <option value="6">6x6 Cube</option>
