--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <option value="2x2x1">2x2x1 Cube</option>
                     <option value="2x2x3">2x2x3 Cube</option>
                     <option value="2x2x4">2x2x4 Cube</option>
-                    <option value="3">3x3x3 (Rubik's Cube)</option>
+                    <option value="3" selected>3x3x3 (Rubik's Cube)</option>
                     <option value="3x3x1">3x3x1 Cube (Floppy)</option>
                     <option value="3x3x2">3x3x2 Cube</option>
                     <option value="3x3x4">3x3x4 Cube</option>
