--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <option value="15">15x15 Cube</option>
                     <option value="16">16x16 Cube</option>
                     <option value="17">17x17 Cube</option>
+                    <option value="custom" class="font-bold text-yellow-500">Custom...</option>
                 </select>
                 <div class="bg-black/50 px-3 py-1 rounded-lg border border-gray-600">
                     <div class="text-gray-500 text-[10px] uppercase tracking-wider leading-none mb-1" id="timer-label">
@@ -376,6 +377,65 @@
                         Play
                     </button>
                 </div>
+                <div class="flex items-center justify-between p-3 bg-gray-900/50 rounded-lg">
+                    <span class="text-gray-300">Custom Puzzle</span>
+                    <div class="flex gap-2">
+                        <input type="text" id="custom-puzzle-input" placeholder="NxNxN"
+                            class="w-20 bg-gray-700 text-white px-2 py-1 rounded border border-gray-600 text-xs focus:outline-none focus:border-blue-500">
+                        <button id="btn-create-custom-puzzle"
+                            class="bg-blue-600 hover:bg-blue-500 text-white text-xs font-bold py-1 px-3 rounded transition">
+                            Create
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Custom Puzzle Panel (Modal Overlay) -->
+    <div id="custom-puzzle-panel"
+        class="hidden fixed inset-0 z-50 bg-black/20 backdrop-blur-[1px] flex items-start justify-start pt-4 pl-4 sm:pt-24 sm:pl-4">
+
+        <div
+            class="bg-gray-800/95 backdrop-blur-md border border-gray-700 rounded-xl shadow-2xl p-4 w-56 pointer-events-auto">
+            <h3 class="text-sm font-bold text-white mb-3 text-center uppercase tracking-wider">Custom Puzzle</h3>
+
+            <div class="space-y-3 mb-4">
+                <div>
+                    <div class="flex justify-between items-center mb-1">
+                        <label class="text-[10px] text-gray-400 uppercase font-bold">Dimension 1</label>
+                        <span id="val-dim1" class="text-purple-400 font-mono font-bold text-xs">3</span>
+                    </div>
+                    <input type="range" id="custom-dim1" min="1" max="20" value="3"
+                        class="w-full h-1.5 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-purple-500">
+                </div>
+                <div>
+                    <div class="flex justify-between items-center mb-1">
+                        <label class="text-[10px] text-gray-400 uppercase font-bold">Dimension 2</label>
+                        <span id="val-dim2" class="text-purple-400 font-mono font-bold text-xs">3</span>
+                    </div>
+                    <input type="range" id="custom-dim2" min="1" max="20" value="3"
+                        class="w-full h-1.5 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-purple-500">
+                </div>
+                <div>
+                    <div class="flex justify-between items-center mb-1">
+                        <label class="text-[10px] text-gray-400 uppercase font-bold">Dimension 3</label>
+                        <span id="val-dim3" class="text-purple-400 font-mono font-bold text-xs">3</span>
+                    </div>
+                    <input type="range" id="custom-dim3" min="1" max="20" value="3"
+                        class="w-full h-1.5 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-purple-500">
+                </div>
+            </div>
+
+            <div class="flex flex-col gap-2">
+                <button id="btn-submit-custom"
+                    class="w-full bg-blue-600 hover:bg-blue-500 text-white text-xs font-bold py-2 rounded-lg transition shadow-lg">
+                    Create Puzzle
+                </button>
+                <button id="btn-cancel-custom"
+                    class="w-full bg-gray-700 hover:bg-gray-600 text-white text-xs font-bold py-2 rounded-lg transition">
+                    Cancel
+                </button>
             </div>
         </div>
     </div>
