--- a/index.html
+++ b/index.html
@@ -382,9 +382,8 @@
                     </div>
                 </div>
                 <!-- Mirror Cube Sticker Tuner Toggle -->
-                <div id="mirror-debug-row"
-                    class="hidden flex items-center justify-between p-3 bg-gray-900/50 rounded-lg">
-                    <span class="text-gray-300">Sticker Tuner</span>
+                <div id="mirror-debug-row" class="flex items-center justify-between p-3 bg-gray-900/50 rounded-lg">
+                    <span class="text-gray-300">Mirror Blocks Tuner</span>
                     <label class="relative inline-flex items-center cursor-pointer">
                         <input type="checkbox" id="toggle-sticker-tuner" class="sr-only peer">
                         <div
@@ -479,9 +478,10 @@
 
     <!-- Mirror Cube Debug UI -->
     <div id="mirror-debug-ui"
-        class="hidden absolute top-20 left-4 z-50 bg-black/70 backdrop-blur-md border border-gray-700 p-4 rounded-lg text-white text-sm shadow-xl">
-        <div class="flex justify-between items-center mb-3">
-            <h3 class="font-bold text-yellow-400">Sticker Tuning</h3>
+        class="hidden absolute top-20 left-4 z-50 bg-black/70 backdrop-blur-md border border-gray-700 p-4 rounded-lg text-white text-sm shadow-xl w-64">
+        <div id="mirror-debug-header"
+            class="flex justify-between items-center mb-3 cursor-move border-b border-gray-700 pb-2">
+            <h3 class="font-bold text-yellow-400">Mirror Blocks Tuner</h3>
             <button id="close-sticker-tuner" class="text-gray-400 hover:text-white">&times;</button>
         </div>
         <div class="mb-3">
@@ -495,6 +495,54 @@
                     class="text-white font-mono">0.080</span></label>
             <input type="range" id="sticker-radius" min="0" max="0.5" step="0.01" value="0.080"
                 class="w-48 h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-yellow-500">
+        </div>
+
+        <div class="mt-4 pt-3 border-t border-gray-700">
+            <h3 class="font-bold mb-3 text-blue-400">Dimensions (x S)</h3>
+            <div class="grid grid-cols-2 gap-3">
+                <div>
+                    <label class="block mb-1 text-xs text-gray-300">Left (X-)</label>
+                    <input type="range" id="dim-left" min="0.5" max="2.5" step="0.1" value="1.4"
+                        class="w-full h-1 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                    <span id="val-left" class="text-xs font-mono text-white block text-right">1.4</span>
+                </div>
+                <div>
+                    <label class="block mb-1 text-xs text-gray-300">Right (X+)</label>
+                    <input type="range" id="dim-right" min="0.5" max="2.5" step="0.1" value="1.6"
+                        class="w-full h-1 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                    <span id="val-right" class="text-xs font-mono text-white block text-right">1.6</span>
+                </div>
+                <div>
+                    <label class="block mb-1 text-xs text-gray-300">Bottom (Y-)</label>
+                    <input type="range" id="dim-bottom" min="0.5" max="2.5" step="0.1" value="2.2"
+                        class="w-full h-1 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                    <span id="val-bottom" class="text-xs font-mono text-white block text-right">2.2</span>
+                </div>
+                <div>
+                    <label class="block mb-1 text-xs text-gray-300">Top (Y+)</label>
+                    <input type="range" id="dim-top" min="0.5" max="2.5" step="0.1" value="0.8"
+                        class="w-full h-1 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                    <span id="val-top" class="text-xs font-mono text-white block text-right">0.8</span>
+                </div>
+                <div>
+                    <label class="block mb-1 text-xs text-gray-300">Back (Z-)</label>
+                    <input type="range" id="dim-back" min="0.5" max="2.5" step="0.1" value="1.1"
+                        class="w-full h-1 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                    <span id="val-back" class="text-xs font-mono text-white block text-right">1.1</span>
+                </div>
+                <div>
+                    <label class="block mb-1 text-xs text-gray-300">Front (Z+)</label>
+                    <input type="range" id="dim-front" min="0.5" max="2.5" step="0.1" value="1.9"
+                        class="w-full h-1 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-blue-500">
+                    <span id="val-front" class="text-xs font-mono text-white block text-right">1.9</span>
+                </div>
+            </div>
+            <div class="mt-4 text-center">
+                <button id="btn-reset-mirror-defaults"
+                    class="bg-gray-700 hover:bg-gray-600 text-white text-xs py-1 px-3 rounded transition">
+                    Reset to Defaults
+                </button>
+            </div>
         </div>
     </div>
 
