feat: enable custom dimensions for Mirror Cubes and add UI control for mirror block.

--- a/index.html
+++ b/index.html
@@ -462,6 +462,14 @@
             </div>
         </div>
 
+        <div class="mb-4">
+            <label class="flex items-center gap-2 cursor-pointer">
+                <input type="checkbox" id="custom-mirror-check"
+                    class="w-4 h-4 rounded bg-gray-600 border-gray-500 text-blue-600 focus:ring-blue-500 focus:ring-offset-gray-800">
+                <span class="text-xs font-bold text-gray-300 uppercase tracking-wider">Mirror Block</span>
+            </label>
+        </div>
+
         <div class="flex flex-col gap-2">
             <button id="btn-submit-custom"
                 class="w-full bg-blue-600 hover:bg-blue-500 text-white text-xs font-bold py-2 rounded-lg transition shadow-lg">
