--- a/index.html
+++ b/index.html
@@ -509,6 +509,40 @@
                 class="w-48 h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-yellow-500">
         </div>
 
+        <!-- Material Properties -->
+        <div class="mt-4 pt-3 border-t border-gray-700">
+            <h3 class="font-bold mb-3 text-green-400">Material Properties</h3>
+
+            <div class="mb-3">
+                <label class="flex items-center gap-2 cursor-pointer mb-2">
+                    <input type="checkbox" id="toggle-sparkle-texture" checked
+                        class="w-4 h-4 rounded bg-gray-600 border-gray-500 text-blue-600">
+                    <span class="text-xs font-bold text-gray-300">Enable Sparkle Texture</span>
+                </label>
+            </div>
+
+            <div class="mb-3">
+                <label class="block mb-1 text-gray-300">Metalness: <span id="metalness-val"
+                        class="text-white font-mono">0.60</span></label>
+                <input type="range" id="material-metalness" min="0" max="1" step="0.05" value="0.6"
+                    class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-green-500">
+            </div>
+
+            <div class="mb-3">
+                <label class="block mb-1 text-gray-300">Roughness: <span id="roughness-val"
+                        class="text-white font-mono">0.40</span></label>
+                <input type="range" id="material-roughness" min="0" max="1" step="0.05" value="0.4"
+                    class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-green-500">
+            </div>
+
+            <div class="mb-3">
+                <label class="block mb-1 text-gray-300">Normal Intensity: <span id="normal-intensity-val"
+                        class="text-white font-mono">0.50</span></label>
+                <input type="range" id="normal-intensity" min="0" max="1" step="0.05" value="0.5"
+                    class="w-full h-2 bg-gray-600 rounded-lg appearance-none cursor-pointer accent-green-500">
+            </div>
+        </div>
+
         <div class="mt-4 pt-3 border-t border-gray-700">
             <h3 class="font-bold mb-3 text-blue-400">Dimensions (x S)</h3>
             <div class="grid grid-cols-2 gap-3">
