feat: Add dynamic 'Custom' leaderboard category to display unique puzzle types from Firebase.

--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
                 <button
                     class="leaderboard-category-btn text-left px-4 py-2 md:py-3 rounded-xl transition font-bold text-gray-400 hover:bg-gray-800 whitespace-nowrap"
                     data-category="mirror">Mirror</button>
+                <button
+                    class="leaderboard-category-btn text-left px-4 py-2 md:py-3 rounded-xl transition font-bold text-gray-400 hover:bg-gray-800 whitespace-nowrap"
+                    data-category="custom">Custom</button>
 
                 <div class="flex-1 hidden md:block"></div>
                 <button id="btn-close-leaderboard"
